hphp/test/zend/good/ext/xml/tests/bug30266.php.skipif
<?hh
require_once("skipif.inc");
