hphp/test/zend/bad/ext/mysqli/tests/mysqli_next_result.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');
?>